--- a/pom.xml
+++ b/pom.xml
@@ -1,92 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.2.4.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
+	<groupId>com.ms.wmadv.modelrecommend</groupId>
+	<artifactId>WMTModelRecommendation</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
+	<name>WMTModelRecommendation</name>
+	<description>Demo project for Spring Boot</description>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">  
-  <modelVersion>4.0.0</modelVersion>  
-  <groupId>com.wm.azuredemo</groupId>  
-  <artifactId>WMTCodeathon</artifactId>  
-  <version>0.0.1-SNAPSHOT</version>  
-  <packaging>jar</packaging>  
-  <description>Demo project for Spring Boot</description>  
-  <name>hello-world-rest-api</name>  
-  <parent> 
-    <groupId>org.springframework.boot</groupId>  
-    <artifactId>spring-boot-starter-parent</artifactId>  
-    <version>2.1.7.RELEASE</version>  
-    <relativePath/>  
-    <!-- lookup parent from repository --> 
-  </parent>  
-  <properties> 
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>  
-    <java.version>1.8</java.version>  
-    <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>  
-    <!-- Needed by io.fabric8 docker-maven-plugin -->  
-    <jar>${project.build.directory}/${project.build.finalName}.jar</jar> 
-  </properties>  
-  <dependencies> 
-    <dependency> 
-      <groupId>org.springframework.boot</groupId>  
-      <artifactId>spring-boot-starter-web</artifactId> 
-    </dependency>  
-    <dependency> 
-      <groupId>org.springframework.boot</groupId>  
-      <artifactId>spring-boot-devtools</artifactId>  
-      <scope>runtime</scope> 
-    </dependency>  
-    <dependency> 
-      <groupId>org.springframework.boot</groupId>  
-      <artifactId>spring-boot-starter-test</artifactId>  
-      <scope>test</scope> 
-    </dependency>
-    <dependency>
-		<groupId>mysql</groupId>
-		<artifactId>mysql-connector-java</artifactId>
-		<version>8.0.16</version>
-	</dependency> 
-  </dependencies>  
-  <build> 
-    <finalName>app</finalName>  
-    <plugins> 
-      <plugin> 
-        <groupId>org.springframework.boot</groupId>  
-        <artifactId>spring-boot-maven-plugin</artifactId> 
-      </plugin>  
-    </plugins> 
-  </build>  
-  <repositories> 
-    <repository> 
-      <id>spring-snapshots</id>  
-      <name>Spring Snapshots</name>  
-      <url>https://repo.spring.io/snapshot</url>  
-      <snapshots> 
-        <enabled>true</enabled> 
-      </snapshots> 
-    </repository>  
-    <repository> 
-      <id>spring-milestones</id>  
-      <name>Spring Milestones</name>  
-      <url>https://repo.spring.io/milestone</url>  
-      <snapshots> 
-        <enabled>false</enabled> 
-      </snapshots> 
-    </repository> 
-  </repositories>  
-  <pluginRepositories> 
-    <pluginRepository> 
-      <id>spring-snapshots</id>  
-      <name>Spring Snapshots</name>  
-      <url>https://repo.spring.io/snapshot</url>  
-      <snapshots> 
-        <enabled>true</enabled> 
-      </snapshots> 
-    </pluginRepository>  
-    <pluginRepository> 
-      <id>spring-milestones</id>  
-      <name>Spring Milestones</name>  
-      <url>https://repo.spring.io/milestone</url>  
-      <snapshots> 
-        <enabled>false</enabled> 
-      </snapshots> 
-    </pluginRepository> 
-  </pluginRepositories> 
+	<properties>
+		<java.version>1.8</java.version>
+	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
+		<!-- <dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency> -->
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-tomcat</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.junit.vintage</groupId>
+					<artifactId>junit-vintage-engine</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
